# Projet-LLMOps-D-ploiement-et-surveillance-d-un-assistant-conversationnel

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  body.json  pyproject.toml  requirements.txt  requirements_eval.txt  requirements_tests.txt
.github/workflows/: codecheck.yaml  rag_eval.yaml  tests.yaml
api/: __init__.py  app.py
data/: corpus_reference.jsonl  documents_longs.jsonl  faq_service_client.jsonl
docs/: guide_pas_a_pas.md  rapport.md  soutenance.md
evaluation/: __init__.py  evaluer_rag.py  jeu_evaluation.jsonl  rapport_eval.json
monitoring/: __init__.py  alertes.yml  analyse_derive.py  docker-compose.yml  grafana_dashboard.json  prometheus.yml  prometheus_app.py
prompts/: default_prompt.txt
scripts/: check_model_weights.py
src/: __init__.py  modele.py  prompts.py  tokeniseur.py
src/rag/: __init__.py  base_connaissance.py  chunking.py  local_backend.py  pipeline.py  recherche.py  reranking.py
tests/: __init__.py  dataset.py  test_chunking.py  test_eval.py  test_modele.py  test_rag.py  test_tokeniseur.py
