[project]
name = "projet-llmops-rag"
version = "0.1.0"
description = "TP LLMOps: assistant conversationnel RAG avec FastAPI, Langfuse, Evidently et CI."
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.coverage.run]
branch = true
source = ["src", "evaluation", "monitoring"]
omit = [
  "api/*",
  "monitoring/*",
]

[tool.coverage.report]
show_missing = true
fail_under = 70

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src", "api", "evaluation", "monitoring", "tests"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = true
exclude = [
  "data/",
  "docs/",
]

[[tool.mypy.overrides]]
module = ["chromadb.*", "sentence_transformers.*", "transformers.*", "torch.*", "evidently.*"]
ignore_missing_imports = true
